--- a/GBH_Movies_Test/GBH_Movies_Test/Views/MainPage.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/Views/MainPage.xaml
@@ -1,16 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
-    x:Class="GBH_Movies_Test.MainPage"
+<TabbedPage
+    x:Class="GBH_Movies_Test.Views.MainPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:GBH_Movies_Test">
+    xmlns:pages="clr-namespace:GBH_Movies_Test.Views"
+    Title="GBH Movies"
+    BarBackgroundColor="#272B2E"
+    NavigationPage.HasBackButton="False">
 
-    <StackLayout>
-        <!--  Place new controls here  -->
-        <Label
-            HorizontalOptions="Center"
-            Text="Welcome to Xamarin.Forms!"
-            VerticalOptions="CenterAndExpand" />
-    </StackLayout>
+    <pages:AllMoviesPage Title="All" Icon="Recent.png" />
 
-</ContentPage>
+    <pages:FavoritesMoviesPage Title="Favorites" Icon="Heart.png" />
+
+</TabbedPage>
