Feat: Dependecy Injection applied to the Pages Binding context and view models  | IoC container implemented. Feat: Pages View Models added. Refactor: Some general changes..

--- a/GBH_Movies_Test/GBH_Movies_Test/App.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/App.xaml
@@ -2,8 +2,11 @@
 <Application
     x:Class="GBH_Movies_Test.App"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:vmLocator="clr-namespace:GBH_Movies_Test.Services">
     <Application.Resources>
+
+        <vmLocator:ViewModelLocator x:Key="Locator" />
 
         <ResourceDictionary>
             <!--  Style for Frames  -->
