--- a/GBH_Movies_Test/GBH_Movies_Test/Views/FavoritesMoviesPage.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/Views/FavoritesMoviesPage.xaml
@@ -10,59 +10,73 @@
 
             <pages:MovieGenresBar />
 
-            <Frame Style="{StaticResource CardStyle}">
-                <StackLayout
-                    Margin="0"
-                    Padding="0"
-                    HeightRequest="273"
-                    Orientation="Vertical"
-                    WidthRequest="323">
-                    <Image Source="Search.png" Style="{StaticResource ImageInsideCardStyle}" />
-                    <StackLayout Style="{StaticResource StackUnderImageStyle}">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="*" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Label
-                                Grid.Row="0"
-                                Grid.Column="0"
-                                Style="{StaticResource TitleStyle}"
-                                Text="Title" />
-                            <Label
-                                Grid.Row="1"
-                                Grid.Column="0"
-                                Style="{StaticResource DateStyle}"
-                                Text="18-08-2018" />
-                            <Image
-                                x:Name="UnPin"
-                                Grid.Row="0"
-                                Grid.Column="1"
-                                Margin="0,0,16,0"
-                                HeightRequest="34"
-                                HorizontalOptions="End"
-                                Source="Pin.png"
-                                WidthRequest="35">
-                                <Image.GestureRecognizers>
-                                    <TapGestureRecognizer Tapped="UnPin_Tapped" />
-                                </Image.GestureRecognizers>
-                            </Image>
-                            <Label
-                                Grid.Row="1"
-                                Grid.Column="1"
-                                Style="{StaticResource UnPinStyle}"
-                                Text="Quit from Favorites" />
-                        </Grid>
-                    </StackLayout>
-                </StackLayout>
-            </Frame>
-            <!--<ListView>
+            <Image Source="Rocket.png" Style="{StaticResource ImageInsideCardStyle}" />
 
-            </ListView>-->
+            <Label
+                FontAttributes="Bold"
+                FontSize="Small"
+                HorizontalTextAlignment="Center"
+                Text="Hey this feature has not been implemented yet!!"
+                TextColor="White" />
+
+            <ListView ItemsSource="{Binding FavMoviesList}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame Style="{StaticResource CardStyle}">
+                                <StackLayout
+                                    Margin="0"
+                                    Padding="0"
+                                    HeightRequest="273"
+                                    Orientation="Vertical"
+                                    WidthRequest="323">
+                                    <Image Source="Search.png" Style="{StaticResource ImageInsideCardStyle}" />
+                                    <StackLayout Style="{StaticResource StackUnderImageStyle}">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Label
+                                                Grid.Row="0"
+                                                Grid.Column="0"
+                                                Style="{StaticResource TitleStyle}"
+                                                Text="Title" />
+                                            <Label
+                                                Grid.Row="1"
+                                                Grid.Column="0"
+                                                Style="{StaticResource DateStyle}"
+                                                Text="18-08-2018" />
+                                            <Image
+                                                x:Name="UnPin"
+                                                Grid.Row="0"
+                                                Grid.Column="1"
+                                                Margin="0,0,16,0"
+                                                HeightRequest="34"
+                                                HorizontalOptions="End"
+                                                Source="Pin.png"
+                                                WidthRequest="35">
+                                                <Image.GestureRecognizers>
+                                                    <TapGestureRecognizer Tapped="UnPin_Tapped" />
+                                                </Image.GestureRecognizers>
+                                            </Image>
+                                            <Label
+                                                Grid.Row="1"
+                                                Grid.Column="1"
+                                                Style="{StaticResource UnPinStyle}"
+                                                Text="Quit from Favorites" />
+                                        </Grid>
+                                    </StackLayout>
+                                </StackLayout>
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
