--- a/GBH_Movies_Test/GBH_Movies_Test/App.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/App.xaml
@@ -44,28 +44,29 @@
             </Style>
             <!--  Style Card AllMoviesPage  -->
             <Style x:Key="CardStyle" TargetType="Frame">
-                <Setter Property="WidthRequest" Value="323" />
-                <Setter Property="HeightRequest" Value="273" />
+                <!--<Setter Property="WidthRequest" Value="323" />
+                <Setter Property="HeightRequest" Value="350" />-->
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <!--<Setter Property="Margin" Value="16, 20, 16, 0" />-->
                 <Setter Property="HasShadow" Value="True" />
             </Style>
             <!--  Style Image Card AllMoviesPage  -->
             <Style x:Key="ImageInsideCardStyle" TargetType="Image">
-                <Setter Property="WidthRequest" Value="323" />
-                <Setter Property="HeightRequest" Value="230" />
+                <!--<Setter Property="WidthRequest" Value="323" />
+                <Setter Property="HeightRequest" Value="300" />-->
             </Style>
             <!--  Style StackLayout under Card image AllMoviesMape  -->
             <Style x:Key="StackUnderImageStyle" TargetType="StackLayout">
                 <Setter Property="BackgroundColor" Value="#312D2D" />
                 <!--<Setter Property="HeightRequest" Value="50" />-->
-                <Setter Property="WidthRequest" Value="323" />
+                <!--<Setter Property="WidthRequest" Value="323" />-->
                 <Setter Property="HorizontalOptions" Value="FillAndExpand" />
                 <Setter Property="Orientation" Value="Vertical" />
             </Style>
             <!--  Style Movie Title Style  -->
             <Style x:Key="TitleStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="LineBreakMode" Value="NoWrap" />
                 <Setter Property="VerticalTextAlignment" Value="Center" />
                 <Setter Property="Margin" Value="16,0,0,0" />
                 <Setter Property="FontFamily" Value="Arial" />
@@ -86,7 +87,7 @@
                 <Setter Property="FontSize" Value="Micro" />
                 <Setter Property="VerticalTextAlignment" Value="Center" />
                 <Setter Property="FontFamily" Value="Arial" />
-                <Setter Property="HorizontalTextAlignment" Value="End" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
                 <Setter Property="Margin" Value="16,0,0,0" />
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="TextColor" Value="#FFFFFF" />
