--- a/GBH_Movies_Test/GBH_Movies_Test/Views/FavoritesMoviesPage.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/Views/FavoritesMoviesPage.xaml
@@ -3,76 +3,233 @@
     x:Class="GBH_Movies_Test.Views.FavoritesMoviesPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ffimage="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:pages="clr-namespace:GBH_Movies_Test.Views"
     BackgroundColor="#161513">
     <ContentPage.Content>
         <StackLayout>
+            <FlexLayout Direction="Column">
 
-            <pages:MovieGenresBar />
+                <Grid FlexLayout.AlignSelf="Start">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-            <Image Source="Rocket.png" Style="{StaticResource ImageInsideCardStyle}" />
+                    <ScrollView
+                        x:Name="Scrollview"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="16,15,16,0"
+                        HeightRequest="40"
+                        HorizontalScrollBarVisibility="Never">
 
-            <Label
-                FontAttributes="Bold"
-                FontSize="Small"
-                HorizontalTextAlignment="Center"
-                Text="Hey this feature has not been implemented yet!!"
-                TextColor="White" />
+                        <FlexLayout Direction="Row">
+                            <Frame Style="{StaticResource FramesStyle}">
 
-            <ListView ItemsSource="{Binding FavMoviesList}">
+                                <Label Style="{StaticResource LabelsStyle}" Text="Action" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Adventure" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Animation" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Comedy" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Crime" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Documentary" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Drama" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Family" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="History" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Horror" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Music" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Mystery" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Romance" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Science Fiction" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="TV Movie" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Thriller" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="War" />
+
+                            </Frame>
+                            <Frame Style="{StaticResource FramesStyle}">
+
+                                <Label Style="{StaticResource LabelsStyle}" Text="Western" />
+
+                            </Frame>
+
+                        </FlexLayout>
+
+                    </ScrollView>
+
+                    <Frame
+                        x:Name="SearchFrame"
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Style="{StaticResource SearchBarStyle}">
+
+                        <FlexLayout Direction="Row" JustifyContent="SpaceBetween">
+                            <Entry x:Name="SearchEntry" Style="{StaticResource EntrySearchBar}" />
+                            <Image
+                                HeightRequest="40"
+                                Source="Search.png"
+                                VerticalOptions="Center"
+                                WidthRequest="40" />
+                        </FlexLayout>
+
+                    </Frame>
+
+                    <!--<Image
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        HeightRequest="300"
+                        HorizontalOptions="Center"
+                        IsVisible="{Binding ListEmpty}"
+                        Source="Unpin.png"
+                        WidthRequest="300" />
+
+                    <Label
+                        Margin="0,20,0,0"
+                        FontAttributes="Bold"
+                        FontSize="Medium"
+                        HorizontalOptions="Center"
+                        HorizontalTextAlignment="Center"
+                        IsVisible="{Binding ListEmpty}"
+                        Text="You have not picked any movie as a favorite one"
+                        TextColor="White" />-->
+                </Grid>
+            </FlexLayout>
+
+            <ListView
+                x:Name="MoviesList"
+                CachingStrategy="RecycleElementAndDataTemplate"
+                HasUnevenRows="True"
+                IsVisible="{Binding ListVisible}"
+                ItemTapped="ItemSelected"
+                ItemsSource="{Binding FavMoviesList, Mode=TwoWay}"
+                RowHeight="350">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <Frame Style="{StaticResource CardStyle}">
-                                <StackLayout
-                                    Margin="0"
-                                    Padding="0"
-                                    HeightRequest="273"
-                                    Orientation="Vertical"
-                                    WidthRequest="323">
-                                    <Image Source="Search.png" Style="{StaticResource ImageInsideCardStyle}" />
-                                    <StackLayout Style="{StaticResource StackUnderImageStyle}">
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*" />
-                                                <ColumnDefinition Width="*" />
-                                            </Grid.ColumnDefinitions>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="Auto" />
-                                                <RowDefinition Height="Auto" />
-                                            </Grid.RowDefinitions>
-                                            <Label
-                                                Grid.Row="0"
-                                                Grid.Column="0"
-                                                Style="{StaticResource TitleStyle}"
-                                                Text="Title" />
-                                            <Label
-                                                Grid.Row="1"
-                                                Grid.Column="0"
-                                                Style="{StaticResource DateStyle}"
-                                                Text="18-08-2018" />
-                                            <Image
-                                                x:Name="UnPin"
-                                                Grid.Row="0"
-                                                Grid.Column="1"
-                                                Margin="0,0,16,0"
-                                                HeightRequest="34"
-                                                HorizontalOptions="End"
-                                                Source="Pin.png"
-                                                WidthRequest="35">
-                                                <Image.GestureRecognizers>
-                                                    <TapGestureRecognizer Tapped="UnPin_Tapped" />
-                                                </Image.GestureRecognizers>
-                                            </Image>
-                                            <Label
-                                                Grid.Row="1"
-                                                Grid.Column="1"
-                                                Style="{StaticResource UnPinStyle}"
-                                                Text="Quit from Favorites" />
-                                        </Grid>
-                                    </StackLayout>
+                            <FlexLayout
+                                Margin="16,0,16,0"
+                                AlignContent="Center"
+                                Direction="Column">
+                                <ffimage:CachedImage
+                                    Margin="16,0,16,0"
+                                    BitmapOptimizations="True"
+                                    DownsampleToViewSize="False"
+                                    HeightRequest="300"
+                                    HorizontalOptions="Center"
+                                    Source="{Binding PosterPath}"
+                                    Style="{StaticResource ImageInsideCardStyle}"
+                                    WidthRequest="300" />
+                                <StackLayout Style="{StaticResource StackUnderImageStyle}">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="3*" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                        </Grid.RowDefinitions>
+                                        <Label
+                                            Grid.Row="0"
+                                            Grid.Column="0"
+                                            Style="{StaticResource TitleStyle}"
+                                            Text="{Binding Title}" />
+                                        <Label
+                                            Grid.Row="1"
+                                            Grid.Column="0"
+                                            Style="{StaticResource DateStyle}"
+                                            Text="{Binding ReleaseDate}" />
+                                        <Image
+                                            x:Name="Pin"
+                                            Grid.Row="0"
+                                            Grid.Column="1"
+                                            Margin="0,0,16,0"
+                                            HeightRequest="34"
+                                            HorizontalOptions="End"
+                                            Source="Unpin.png"
+                                            WidthRequest="35">
+                                            <!--<Image.GestureRecognizers>
+                                                <PanGestureRecognizer PanUpdated="Pin_Tapped" TouchPoints="1" />
+                                            </Image.GestureRecognizers>-->
+                                            <!--<Image.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="Pin_Tapped" />
+                                            </Image.GestureRecognizers>-->
+                                        </Image>
+                                        <Label
+                                            Grid.Row="1"
+                                            Grid.Column="1"
+                                            Style="{StaticResource UnPinStyle}"
+                                            Text="Quit from Favorites" />
+                                    </Grid>
                                 </StackLayout>
-                            </Frame>
+                            </FlexLayout>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
