Feat: Now infinite scrolling is allowed in AllMoviesPage, now you can scroll down until find the movie that you are looking for.. Feat: Some new features added.

--- a/GBH_Movies_Test/GBH_Movies_Test/Views/AllMoviesPage.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/Views/AllMoviesPage.xaml
@@ -145,16 +145,12 @@
                 </Grid>
             </FlexLayout>
 
-            <ActivityIndicator
-                IsRunning="{Binding ActivityIndicatorRunning}"
-                IsVisible="{Binding ActivityIndicatorRunning}"
-                Color="#0088FF" />
-
             <ListView
                 x:Name="MoviesList"
                 CachingStrategy="RecycleElementAndDataTemplate"
                 HasUnevenRows="True"
                 IsVisible="{Binding ListVisible}"
+                ItemAppearing="MoviesList_ItemAppearing"
                 ItemTapped="ItemSelected"
                 ItemsSource="{Binding AllMoviesList}"
                 RowHeight="350">
@@ -223,6 +219,10 @@
                 </ListView.ItemTemplate>
             </ListView>
 
+            <ActivityIndicator
+                x:Name="activityIndicator"
+                Margin="0,0,0,58"
+                Color="#0088FF" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
