Feat: Some featuresa added. The app is ready.

--- a/GBH_Movies_Test/GBH_Movies_Test/App.xaml
+++ b/GBH_Movies_Test/GBH_Movies_Test/App.xaml
@@ -37,8 +37,9 @@
                 <Setter Property="FontSize" Value="Medium" />
                 <Setter Property="Placeholder" Value="Search" />
                 <Setter Property="PlaceholderColor" Value="#B2A4A0" />
-                <Setter Property="Text" Value="Search" />
+                <Setter Property="Text" Value="" />
                 <Setter Property="TextColor" Value="#B2A4A0" />
+                <Setter Property="HorizontalOptions" Value="FillAndExpand" />
                 <Setter Property="VerticalOptions" Value="Center" />
                 <Setter Property="WidthRequest" Value="200" />
             </Style>
